Minor responsiveness isssues fix on small devices

--- a/Base-Apparel-Coming-Soon/sass/base.scss
+++ b/Base-Apparel-Coming-Soon/sass/base.scss
@@ -11,6 +11,9 @@ html {
   @media only screen and(max-width:900px) {
     font-size: 56%;
   }
+  @media only screen and(min-width:1440px) {
+    font-size: 70%;
+  }
 }
 
 body {
