--- a/Base-Apparel-Coming-Soon/sass/input.scss
+++ b/Base-Apparel-Coming-Soon/sass/input.scss
@@ -4,9 +4,9 @@
     margin-top: 2rem;
     position: relative;
     @media only screen and (max-width: 900px) {
-    width: 70%;
-    margin:3rem auto;
-  }
+      width: 70%;
+      margin: 3rem auto;
+    }
   }
 
   &__value {
@@ -18,9 +18,9 @@
     font-family: "Josefin Sans", sans-serif;
     color: $dark-grayish-red;
     font-weight: $bold;
-    @media only screen and(max-width:425px){
-    padding:1.7rem 3.2rem
-  }
+    @media only screen and(max-width:425px) {
+      padding: 1.7rem 3.2rem;
+    }
     &--error {
       border: 1px solid $soft-red;
     }
@@ -35,7 +35,7 @@
     padding-left: 2.6rem;
     color: $soft-red;
     margin-top: 1rem;
-    opacity:0;
+    opacity: 0;
   }
 
   &__error-icon {
@@ -44,6 +44,9 @@
     right: 5rem;
     transform: translateY(-30%);
     width: 2rem;
-    display:inline-block;
+    display: inline-block;
+    @media only screen and (max-width: 400px) {
+      right: 4rem;
+    }
   }
 }
